--- a/v0/index.html
+++ b/v0/index.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.js" type="text/javascript"></script>
 
     <!-- ===========================
     THEME INFO
@@ -67,16 +64,13 @@
 			<div id="content" class="row">
 				    <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
 					  <!--Sidebar content-->
-								<div id="contacts" class="info">
-									<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
-										<div id="personal-info hidden-print" class="adjust-top">								
+								<div id="contacts hidden-print" class="info">
+									<img class="pofilepic" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
+										<div id="personal-info" class="adjust-top">								
 											<div id="contactf">
 												<div class="each btn btn-default cbtn">
 													<i class="fa fa-map-marker"></i>
-													<div class="info">Гатчина</div>	
-														<div id="dialog">
-															<div id="dvMap"></div>
-														</div>													
+													<div class="info">Гатчина</div>													
 												</div>
 												<div class="clearfix"></div>
 											</div>	
@@ -106,6 +100,5 @@
 			</div>
 		</div>
 		<div class="clearfix"></div>
-			<script src="js/map.js"></script>
 </body>
 </html>
