--- a/v0/index.html
+++ b/v0/index.html
@@ -64,8 +64,8 @@
 			<div id="content" class="row">
 				    <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
 					  <!--Sidebar content-->
-								<div id="contacts hidden-print" class="info">
-									<img class="pofilepic" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
+								<div id="contacts" class="info">
+									<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 										<div id="personal-info" class="adjust-top">								
 											<div id="contactf">
 												<div class="each btn btn-default cbtn">
@@ -79,7 +79,7 @@
 												<div class="info">+79218475171</div>
 												<div class="clearfix"></div>
 											</div>
-											<div class="each btn btn-default cbtn">
+											<div class="each btn btn-default cbtn hidden-print">
 												<i class="fa fa-envelope-o"></i>
 												<div class="info"><p><a href="mailto:planol@me.com">planol@me.com</a></p></div>
 												<div class="clearfix"></div>
