--- a/v0/index.html
+++ b/v0/index.html
@@ -67,6 +67,13 @@
 								<div id="contacts" class="info">
 									<img class="pofilepic hidden-print" src="https://pp.vk.me/c618827/v618827774/19b26/htp5L5QdLiA.jpg" alt="">
 										<div id="personal-info" class="adjust-top">								
+											<div class="each btn btn-default cbtn visible-print-block">
+												<i class="fa fa-phone-square"></i>
+												<div class="info">Платонов</div>
+												<div class="info">Александр</div>
+												<div class="info">Андреевич</div>
+												<div class="clearfix"></div>
+											</div>
 											<div id="contactf">
 												<div class="each btn btn-default cbtn">
 													<i class="fa fa-map-marker"></i>
