--- a/v0/index.html
+++ b/v0/index.html
@@ -91,6 +91,11 @@
 												<div class="info"><p><a href="mailto:planol@me.com">planol@me.com</a></p></div>
 												<div class="clearfix"></div>
 											</div>
+											<div class="each btn btn-default cbtn hidden-print">
+												<i class="fa fa-vk"></i>
+												<div class="info"><p><a href="https://vk.com/planol.alex">vk.com</a></p></div>
+												<div class="clearfix"></div>
+											</div>
 										</div> 
 								</div>
 							</div>
