--- a/v0/index.html
+++ b/v0/index.html
@@ -93,7 +93,7 @@
 											</div>
 											<div class="each btn btn-default cbtn hidden-print">
 												<i class="fa fa-vk"></i>
-												<div class="info"><p><a href="https://vk.com/planol.alex">vk.com</a></p></div>
+												<div class="info"><p><a href="https://vk.com/planol.alex">Вконтакте</a></p></div>
 												<div class="clearfix"></div>
 											</div>
 										</div> 
