--- a/v0/index.html
+++ b/v0/index.html
@@ -91,9 +91,9 @@
 												<div class="info"><p><a href="mailto:planol@me.com">planol@me.com</a></p></div>
 												<div class="clearfix"></div>
 											</div>
-											<div class="each btn btn-default cbtn hidden-print">
+											<div class="each btn btn-default cbtn hidden-print" onclick="location.href='https://vk.com/planol.alex';">
 												<i class="fa fa-vk"></i>
-												<div class="info"><p><a href="https://vk.com/planol.alex">Вконтакте</a></p></div>
+												<div class="info"><p> <a href="https://vk.com/planol.alex">Вконтакте</a></p></div>
 												<div class="clearfix"></div>
 											</div>
 										</div> 
