--- a/v0/index.html
+++ b/v0/index.html
@@ -101,7 +101,16 @@
 							</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
-
+						<div class="b-container">
+    Sample Text
+    <a href="javascript:PopUpShow()">Show popup</a>
+</div>
+<div class="b-popup" id="popup1">
+    <div class="b-popup-content">
+        Text in Popup
+    <a href="javascript:PopUpHide()">Hide popup</a>
+    </div>
+</div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
@@ -111,6 +120,8 @@
 					</div>
 			</div>
 		</div>
+			<script src="js/google-map.js"></script>
+			<script src="js/map.js"></script>
 		<div class="clearfix"></div>
 </body>
 </html>
