--- a/v0/index.html
+++ b/v0/index.html
@@ -101,16 +101,27 @@
 							</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
-
-
-						<a href="javascript:PopUpShow()">Show popup</a>
-
-					<div class="b-popup" id="popup1">
-						<div class="b-popup-content">
-							Text in Popup
-						<a href="javascript:PopUpHide()">Hide popup</a>
-						</div>
-					</div>
+						<div class="modal fade">
+						  <div class="modal-dialog">
+							<div class="modal-content">
+							  <div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+								<h4 class="modal-title">Modal title</h4>
+							  </div>
+							  <div class="modal-body">
+								<p>One fine body…</p>
+							  </div>
+							  <div class="modal-footer">
+								<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-primary">Save changes</button>
+							  </div>
+							</div><!-- /.modal-content -->
+						  </div><!-- /.modal-dialog -->
+						</div><!-- /.modal -->
+										   BootstrapDialog.show({
+							message: 'Hi Apple!'
+						});
+        
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
