--- a/v0/index.html
+++ b/v0/index.html
@@ -33,6 +33,10 @@
     =========================== -->
     <link href='//fonts.googleapis.com/css?family=Kristi|Alegreya+Sans:300' rel='stylesheet' type='text/css'>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	
+	<script src="js/google-map.js"></script>
+	<script src="js/map.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -101,6 +105,11 @@
 							</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
+							$(document).ready(function(){
+							$(".btn").click(function(){
+								$("#myModal").modal('show');
+							});
+						});
 					  <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">Launch Demo Modal</a>
 						<div id="myModal" class="modal fade">
 							<div class="modal-dialog">
@@ -129,8 +138,7 @@
 					</div>
 			</div>
 		</div>
-			<script src="js/google-map.js"></script>
-			<script src="js/map.js"></script>
+
 		<div class="clearfix"></div>
 </body>
 </html>
