--- a/v0/index.html
+++ b/v0/index.html
@@ -105,7 +105,10 @@
 							</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
-					  <a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">Launch Demo Modal</a>
+					 <!-- Button HTML (to Trigger Modal) -->
+						<a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">Launch Demo Modal</a>
+						
+						<!-- Modal HTML -->
 						<div id="myModal" class="modal fade">
 							<div class="modal-dialog">
 								<div class="modal-content">
@@ -124,7 +127,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+										</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
 					</div>
