--- a/v0/index.html
+++ b/v0/index.html
@@ -120,7 +120,7 @@
 										</div>
 										<div class="modal-body">
 											<p>Do you want to save changes you made to document before closing?</p>
-											<div id="map1" class="cbtn"></div>
+											<div id="map1" class="map1"></div>
 										</div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
