--- a/v0/index.html
+++ b/v0/index.html
@@ -120,29 +120,29 @@
 										</div>
 										<div class="modal-body">
 											<p>Do you want to save changes you made to document before closing?</p>
-																										   <style>
-																  html, body, #map-canvas {
-																	height: 100%;
-																	margin: 0px;
-																	padding: 0px
-																  }
-																</style>
-																<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-																<script>
-															var map;
-															function initialize() {
-															  var mapOptions = {
-																zoom: 8,
-																center: new google.maps.LatLng(-34.397, 150.644)
-															  };
-															  map = new google.maps.Map(document.getElementById('map-canvas'),
-																  mapOptions);
-															}
+												 <style>
+												  html, body, #map-canvas {
+													height: 100%;
+													margin: 0px;
+													padding: 0px
+												  }
+												</style>
+												<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+												<script>
+											var map;
+											function initialize() {
+											  var mapOptions = {
+												zoom: 8,
+												center: new google.maps.LatLng(-34.397, 150.644)
+											  };
+											  map = new google.maps.Map(document.getElementById('map-canvas'),
+												  mapOptions);
+											}
 
-															google.maps.event.addDomListener(window, 'load', initialize);
+											google.maps.event.addDomListener(window, 'load', initialize);
 
-																</script>
-											<div id="map1" class="map1"></div>
+												</script>
+											<div id="map-canvas"></div>
 										</div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
