--- a/v0/index.html
+++ b/v0/index.html
@@ -40,7 +40,6 @@
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 
 
-
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
@@ -121,15 +120,20 @@
 										</div>
 										<div class="modal-body">
 											<p>Do you want to save changes you made to document before closing?</p>
-												 <style>
-												  html, body, #map-canvas {
-													height: 100%;
-													margin: 0px;
-													padding: 0px
-												  }
-												</style>
+																	<script>
+																		var map;
+																		function initialize() {
+																		  var mapOptions = {
+																			zoom: 8,
+																			center: new google.maps.LatLng(-34.397, 150.644)
+																		  };
+																		  map = new google.maps.Map(document.getElementById('map-canvas'),
+																			  mapOptions);
+																		}
 
+																		google.maps.event.addDomListener(window, 'load', initialize);
 
+																	</script>
 											<div id="map-canvas"></div>
 										</div>
 										<div class="modal-footer">
