--- a/v0/index.html
+++ b/v0/index.html
@@ -37,7 +37,7 @@
 	<script src="js/google-map.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
 
     <!--[if IE]>
@@ -148,6 +148,5 @@
 		</div>
 
 		<div class="clearfix"></div>
-		<div id="map1" class="map1"></div>
 </body>
 </html>
