--- a/v0/index.html
+++ b/v0/index.html
@@ -115,14 +115,19 @@
 									<div class="modal-content">
 										<div class="modal-body">
 																	<script>
-																		var map;
 																		function initialize() {
+																		  var myLatlng = new google.maps.LatLng(59.575129, 30.121597);
 																		  var mapOptions = {
-																			zoom: 8,
-																			center: new google.maps.LatLng(-34.397, 150.644)
-																		  };
-																		  map = new google.maps.Map(document.getElementById('map-canvas'),
-																			  mapOptions);
+																			zoom: 7,
+																			center: myLatlng
+																		  }
+																		  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+																		  var marker = new google.maps.Marker({
+																			  position: myLatlng,
+																			  map: map,
+																			  title: 'Hello World!'
+																		  });
 																		}
 
 																		google.maps.event.addDomListener(window, 'load', initialize);
