--- a/v0/index.html
+++ b/v0/index.html
@@ -144,6 +144,7 @@
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
+					  <div id="map-canvas"></div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
 					  <!--Body content-->
