--- a/v0/index.html
+++ b/v0/index.html
@@ -36,7 +36,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+	<script src="http://maps.googleapis.com/maps/api/js"></script>
 
 
     <!--[if IE]>
@@ -114,7 +114,6 @@
 								<div class="modal-dialog">
 									<div class="modal-content">
 										<div class="modal-body">
-
 											<div id="map-canvas"></div>
 										</div>
 										<div class="modal-footer">
