--- a/v0/index.html
+++ b/v0/index.html
@@ -37,6 +37,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script src="http://maps.googleapis.com/maps/api/js"></script>
+	<script src="js/google-map.js"></script>
 
 
     <!--[if IE]>
@@ -125,25 +126,6 @@
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
-					  																	<script>
-																		function initialize() {
-																		  var myLatlng = new google.maps.LatLng(59.575129, 30.121597);
-																		  var mapOptions = {
-																			zoom: 7,
-																			center: myLatlng
-																		  }
-																		  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-
-																		  var marker = new google.maps.Marker({
-																			  position: myLatlng,
-																			  map: map,
-																			  title: 'Hello World!'
-																		  });
-																		}
-
-																		google.maps.event.addDomListener(window, 'load', initialize);
-
-																	</script>
 					  <div id="map-canvas"></div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
