--- a/v0/index.html
+++ b/v0/index.html
@@ -114,8 +114,9 @@
 							<div id="myModal" class="modal fade">
 								<div class="modal-dialog">
 									<div class="modal-content">
-										<div class="modal-body">
+										<div class="modal-body"> <div style="height:100%; width:100%;">
 											<div id="map-canvas"></div>
+											</div>
 										</div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
