--- a/v0/index.html
+++ b/v0/index.html
@@ -114,9 +114,9 @@
 							<div id="myModal" class="modal fade">
 								<div class="modal-dialog">
 									<div class="modal-content">
-										<div class="modal-body"> <div style="height:100%; width:100%;">
+										<div class="modal-body" style="height:100%; width:100%;"> 
 											<div id="map-canvas"></div>
-											</div>
+											
 										</div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
@@ -127,6 +127,10 @@
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
+					  										<div class="modal-body" style="height:100%; width:100%;"> 
+											<div id="map-canvas"></div>
+											
+										</div>
 					  <div id="map-canvas"></div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
