--- a/v0/index.html
+++ b/v0/index.html
@@ -114,7 +114,7 @@
 							<div id="myModal" class="modal fade">
 								<div class="modal-dialog">
 									<div class="modal-content">
-										<div class="modal-body" style="height:100%; width:100%;"> 
+										<div class="modal-body" style="height:300px; width:100%;"> 
 											<div id="map-canvas"></div>
 											
 										</div>
