--- a/v0/index.html
+++ b/v0/index.html
@@ -115,7 +115,9 @@
 								<div class="modal-dialog">
 									<div class="modal-content">
 										<div class="modal-body" style="height:300px; width:100%;"> 
-											<div id="map-canvas"></div>
+										  <div id="map" style="width: 100%; height: 100%; position: absolute;">
+                 <div id="map-canvas"></div>
+     </div>
 											
 										</div>
 										<div class="modal-footer">
