--- a/v0/index.html
+++ b/v0/index.html
@@ -36,7 +36,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+	<script src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false"></script>
 	<script src="js/google-map.js"></script>
 
 
@@ -132,24 +132,8 @@
     #map_canvas1 { height: 100% }
 </style>
 
-<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false"></script>
 
-<script>
-    function initialize() {
-        var mapOptions = {
-            center: new google.maps.LatLng(50.98188, 6.78655),
-            zoom: 8,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map(document.getElementById("map_canvas1"),mapOptions);
-        window.console.log("Position center: "+map.getCenter()+"\nZoom: "+map.getZoom());
-        map.setZoom(12);
-        map.setCenter(new google.maps.LatLng(0, 0));
-        window.console.log("Position center: "+map.getCenter()+"\nZoom: "+map.getZoom());
-    }
 
-    google.maps.event.addDomListener(window, 'load', initialize);
-</script>
 <div id="map_canvas1"></div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
