--- a/v0/index.html
+++ b/v0/index.html
@@ -124,7 +124,11 @@
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
-
+<style type="text/css">
+    html { height: 100% }
+    body { height: 100%; margin: 0; padding: 0 }
+    #map_canvas { height: 100% }
+</style>
 <div id="map_canvas1"></div>
 
 
