--- a/v0/index.html
+++ b/v0/index.html
@@ -114,7 +114,7 @@
 							<div id="myModal" class="modal fade">
 								<div class="modal-dialog">
 									<div class="modal-content">
-									<div id="map_canvas1"></div>
+
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
 										</div>
@@ -127,7 +127,7 @@
 <style type="text/css">
     html { height: 100% }
     body { height: 100%; margin: 0; padding: 0 }
-    #map_canvas { height: 100% }
+    #map_canvas1 { height: 100% }
 </style>
 <div id="map_canvas1"></div>
 
