--- a/v0/index.html
+++ b/v0/index.html
@@ -114,7 +114,7 @@
 							<div id="myModal" class="modal fade">
 								<div class="modal-dialog">
 									<div class="modal-content">
-									<div id="map_canvas1"></div>
+									<div id="map_canvas"></div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
 										</div>
