--- a/v0/index.html
+++ b/v0/index.html
@@ -113,8 +113,9 @@
 							<!-- Modal HTML -->
 							<div id="myModal" class="modal fade">
 								<div class="modal-dialog">
-									<div class="modal-content">
+									<div class="modal-content"><div id="map_canvas_container">
 									<div id="map_canvas"></div>
+									</div>
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
 										</div>
