--- a/v0/index.html
+++ b/v0/index.html
@@ -113,7 +113,8 @@
 							<!-- Modal HTML -->
 							<div id="myModal" class="modal fade">
 								<div class="modal-dialog">
-									<div class="modal-content"><div id="map_canvas_container">
+									<div class="modal-content">
+									<div id="map_canvas_container">
 									<div id="map_canvas"></div>
 									</div>
 										<div class="modal-footer">
