--- a/v0/index.html
+++ b/v0/index.html
@@ -115,7 +115,7 @@
 								<div class="modal-dialog">
 									<div class="modal-content">
 									
-									<div id="map_canvas"></div>
+									<div id="map-canvas" class=""></div>
 	
 										<div class="modal-footer">
 											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
@@ -127,7 +127,7 @@
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
 
-
+				
 
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
