--- a/v0/index.html
+++ b/v0/index.html
@@ -111,18 +111,30 @@
 							<a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">open_map</a>
 							
 							<!-- Modal HTML -->
-							<div id="myModal" class="modal fade">
-								<div class="modal-dialog">
-									<div class="modal-content">
-									
-									<div id="map-canvas" class=""></div>
-	
-										<div class="modal-footer">
-											<button type="button" class="btn btn-default" data-dismiss="modal">Я понял,где это :)</button>
-										</div>
-									</div>
-								</div>
-							</div>
+							<a href="#myMapModal" class="btn" data-toggle="modal">Launch Map Modal</a>
+
+<div class="modal fade" id="myMapModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                 <h4 class="modal-title">Modal title</h4>
+
+            </div>
+            <div class="modal-body">
+                <div class="container">
+                    <div class="row">
+                        <div id="map-canvas" class=""></div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+		</div>
+		</div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
