--- a/v0/index.html
+++ b/v0/index.html
@@ -108,10 +108,8 @@
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
 						 <!-- Button HTML (to Trigger Modal) -->
-							<a href="#myModal" class="btn btn-lg btn-primary" data-toggle="modal">open_map</a>
-							
-							<!-- Modal HTML -->
-							<a href="#myMapModal" class="btn" data-toggle="modal">Launch Map Modal</a>
+							<h1 class="">Lazy Load Google Map</h1> 
+<a href="#myMapModal" class="btn" data-toggle="modal">Launch Map Modal</a>
 
 <div class="modal fade" id="myMapModal">
     <div class="modal-dialog">
@@ -133,8 +131,11 @@
                 <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
-		</div>
-		</div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
