--- a/v0/index.html
+++ b/v0/index.html
@@ -108,11 +108,9 @@
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
 
- 
+       <p><a href="#myModal" role="button" data-toggle="modal" class="btn btn-primary">Показать</a></p>  
 
 
-
- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">View Map</button>
 
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
@@ -128,24 +126,19 @@
 		</div>
 
 		<div class="clearfix"></div>
-   <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Google Maps</h4>
-                </div>
-                <div class="modal-body">
-
-                    <div id="map_canvas" style="width:auto; height: 500px;"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
+		
+  <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      <h3 id="myModalLabel">Нижегородский театр «Комедія»</h3>
     </div>
+    <div class="modal-body">
+      <div id="mapcanvas"></div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button>  
+	  
+    </div>
+  </div>
 </body>
 </html>
