--- a/v0/index.html
+++ b/v0/index.html
@@ -127,6 +127,15 @@
 		
        <p><a href="#myModal" role="button" data-toggle="modal" class="btn btn-primary">Показать</a></p>  
 
+ <div class="container">
+
+      <h1>Одна карта Google Map в Bootstrap Modal</h1>
+      <p>Нажмите на кнопку в низу</p>
+
+      <!-- Кнопка -->
+      <p><a href="#myModal" role="button" data-toggle="modal" class="btn btn-primary">Показать</a></p>  
+
+       <!-- Модальное окно -->
   <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -136,9 +145,10 @@
       <div id="mapcanvas"></div>
     </div>
     <div class="modal-footer">
-      <button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button>  
-	  
+      <button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button>      
     </div>
   </div>
+
+    </div> <!-- /container -->
 </body>
 </html>
