--- a/v0/index.html
+++ b/v0/index.html
@@ -107,15 +107,6 @@
 							</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
-$(function() {
-  var $modal = $('#mymodal'),
-    $map = $('#map_canvas');
-  $modal.on('shown.bs.modal', function () {
-    google.maps.event.trigger($map[0], 'resize');
-  });
-});
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">View Map</button>
-
 
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
@@ -132,24 +123,34 @@ $(function() {
 
 		<div class="clearfix"></div>
 		
-   <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Google Maps</h4>
-                </div>
-                <div class="modal-body">
-
-                    <div id="map_canvas" style="width:auto; height: 500px;"></div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
+   <div class="bs-docs-example">
+    <ul id="myTab" class="nav nav-tabs">
+      <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
+      <li class=""><a href="#profile" data-toggle="tab">Map</a></li>
+    </ul>
+    <div id="myTabContent" class="tab-content">
+      <div class="tab-pane fade active in" id="home">
+        <p>Текст на первом tab'e. Описание чего-либо.</p>
+        <p>Кликайте на второй tab, там Яндекс Карта.</p>
+      </div>
+      <div class="tab-pane fade" id="profile">
+                <!-- вставляем Яндекс Карту-->
+        <div id="YMapsID" style="width:900px;height:400px"></div>
+      </div>
     </div>
+ </div>
+<script type="text/javascript">
+//отслеживаем событие, когда отобразился таб
+$('a[data-toggle="tab"]').on('shown', function (e) {
+YMaps.jQuery(function () {
+    //если атрибут href равен '#profile' (а это указатель на наш div, в котором расположена карта)
+    if ($(e.target).attr('href') == '#profile' )
+    {
+    //перерисовываем карту
+    map.redraw();
+    }
+    })
+})
+</script> 
 </body>
 </html>
