--- a/v0/index.html
+++ b/v0/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<div class="container">
+
 
       <h1>Одна карта Google Map в Bootstrap Modal</h1>
       <p>Нажмите на кнопку в низу</p>
@@ -23,7 +23,7 @@
     </div>
   </div>
 
-    </div> <!-- /container -->
+     <!-- /container -->
     
  <script type="text/javascript">
      myLatlng = new google.maps.LatLng(56.32039899999999,44.002245000000016);
