--- a/v0/index.html
+++ b/v0/index.html
@@ -80,9 +80,9 @@
 												<div class="clearfix"></div>
 											</div>
 											<div id="contactf">
-												<div class="each btn btn-default cbtn" href="#myModal">
+												<div class="each btn btn-default cbtn" onclick="#myModal">
 													<i class="fa fa-map-marker"></i>
-													<div class="info" >Гатчина</div>													
+													<div class="info">Гатчина</div>													
 												</div>
 												<div class="clearfix"></div>
 											</div>	
