--- a/v0/index.html
+++ b/v0/index.html
@@ -80,7 +80,7 @@
 												<div class="clearfix"></div>
 											</div>
 											<div id="contactf">
-												<div class="each btn btn-default cbtn" onclick="#myModal">
+												<div href="#myModal" role="button" class="each btn btn-default cbtn" >
 													<i class="fa fa-map-marker"></i>
 													<div class="info">Гатчина</div>													
 												</div>
@@ -122,24 +122,20 @@
 
 		<div class="clearfix"></div>
 		
-<div id="myModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Confirmation</h4>
-            </div>
-            <div class="modal-body">
-                <div id="mapcanvas"></div>
-                <p class="text-warning"><small>If you don't save, your changes will be lost.</small></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
+		<-- Modal -->
+		<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h3 id="myModalLabel">Modal header</h3>
+		  </div>
+		  <div class="modal-body">
+			<p>One fine body…</p>
+		  </div>
+		  <div class="modal-footer">
+			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+			<button class="btn btn-primary">Save changes</button>
+		  </div>
+		</div>
  
 </body>
 </html>
