--- a/v0/index.html
+++ b/v0/index.html
@@ -80,7 +80,8 @@
 												<div class="clearfix"></div>
 											</div>
 											<div id="contactf">
-												<div href="#myModal" role="button" class="each btn btn-default cbtn" >
+
+												<div class="each btn btn-default cbtn" href="#myModal" role="button" class="btn" data-toggle="modal" >
 													<i class="fa fa-map-marker"></i>
 													<div class="info">Гатчина</div>													
 												</div>
