--- a/v0/index.html
+++ b/v0/index.html
@@ -86,6 +86,20 @@
 													<div class="info">Гатчина</div>													
 												</div>
 												<div class="clearfix"></div>
+												<-- Modal -->
+<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Modal header</h3>
+  </div>
+  <div class="modal-body">
+    <p>One fine body…</p>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    <button class="btn btn-primary">Save changes</button>
+  </div>
+</div>
 											</div>	
 											<div class="each btn btn-default cbtn">
 												<i class="fa fa-phone-square"></i>
@@ -107,7 +121,7 @@
 							</div>
 					<div class="MainContent col-xs-8 col-sm-8 col-md-5 col-lg-5">
 					  <!--Body content-->
-
+<a href="#myModal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
 					  <!--Body content-->
@@ -123,20 +137,6 @@
 
 		<div class="clearfix"></div>
 		
-		<-- Modal -->
-		<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-		  <div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h3 id="myModalLabel">Modal header</h3>
-		  </div>
-		  <div class="modal-body">
-			<p>One fine body…</p>
-		  </div>
-		  <div class="modal-footer">
-			<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-			<button class="btn btn-primary">Save changes</button>
-		  </div>
-		</div>
  
 </body>
 </html>
