--- a/v0/index.html
+++ b/v0/index.html
@@ -80,26 +80,12 @@
 												<div class="clearfix"></div>
 											</div>
 											<div id="contactf">
-
-												<div class="each btn btn-default cbtn" href="#myModal" role="button" class="btn" data-toggle="modal" >
+<button type="button" class="btn btn-lg btn-danger" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+												<div class="each btn btn-default cbtn">
 													<i class="fa fa-map-marker"></i>
 													<div class="info">Гатчина</div>													
 												</div>
 												<div class="clearfix"></div>
-												<-- Modal -->
-<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Modal header</h3>
-  </div>
-  <div class="modal-body">
-    <p>One fine body…</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary">Save changes</button>
-  </div>
-</div>
 											</div>	
 											<div class="each btn btn-default cbtn">
 												<i class="fa fa-phone-square"></i>
