--- a/v0/index.html
+++ b/v0/index.html
@@ -82,7 +82,7 @@
 											
 											<div id="contactf">
 												
-												<div class="each btn btn-default cbtn" data-toggle="popover" title="Расположение" data-content="Пригород Санкт-Петербурга">
+												<div class="each btn btn-default cbtn">
 													<i class="fa fa-map-marker"></i>
 													<div class="info">Гатчина</div>													
 												</div>
