--- a/v0/index.html
+++ b/v0/index.html
@@ -35,7 +35,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.js"></script>
+	<script src="js/bootstrap.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	
 
