--- a/v0/index.html
+++ b/v0/index.html
@@ -36,6 +36,7 @@
 	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/map.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	
 
