--- a/v0/index.html
+++ b/v0/index.html
@@ -127,15 +127,11 @@
 					  <div class="modal fade" id="mapmodals">
 						<div class="modal-dialog modal-lg">
 						  <div class="modal-content">
-							<div class="modal-header">
-							  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							  <h4 class="modal-title">Гатчина</h4>
-							</div>
 							<div class="modal-body">
 							  <div id="map-container"></div>
 							</div>
 							<div class="modal-footer">
-							  <button type="button" class="close" data-dismiss="modal">Я понял где это :)</button>
+							  <button type="button" class="printbtn btn btn-default navbar-btn hidden-print" data-dismiss="modal">Я понял где это :)</button>
 							</div>
 						  </div><!-- /.modal-content -->
 						</div><!-- /.modal-dialog -->
