--- a/v0/index.html
+++ b/v0/index.html
@@ -131,7 +131,7 @@
 							  <div id="map-container"></div>
 							</div>
 							<div class="modal-footer">
-							  <button type="button" class="printbtn btn btn-default navbar-btn hidden-print" data-dismiss="modal">Я понял где это :)</button>
+							  <button type="button" class="btn btn-default navbar-btn hidden-print cbtn" data-dismiss="modal">Я понял где это :)</button>
 							</div>
 						  </div><!-- /.modal-content -->
 						</div><!-- /.modal-dialog -->
