--- a/v0/index.html
+++ b/v0/index.html
@@ -92,7 +92,7 @@
 											
 											<div class="each btn btn-default cbtn">
 												<i class="fa fa-phone-square"></i>
-												<div class="info">+79218475171</div>
+												<div class="info"><a href="tel:+79218475171">+79218475171</a></div>
 												<div class="clearfix"></div>
 											</div>
 											
