--- a/v0/index.html
+++ b/v0/index.html
@@ -115,7 +115,7 @@
 						<section id="educational">
 							<div class="section-head">
 											<i class="fa fa-book"></i>
-											<span class="label">Обучение</span>
+											<a class="navbar-brand">Обучение</a>
 											<div class="clearfix"></div>
 							</div>
 							
