--- a/v0/index.html
+++ b/v0/index.html
@@ -114,7 +114,7 @@
 					  <!--Body content-->
 						<section id="educational">
 							<div class="section-head">
-											<i class="fa fa-book navbar-brand title"></i>
+											<a class="fa fa-book navbar-brand Btitle"></a>
 											<a class="navbar-brand">Обучение</a>
 											<div class="clearfix"></div>
 							</div>
