--- a/v0/index.html
+++ b/v0/index.html
@@ -115,7 +115,7 @@
 						<section id="educational">
 							<div class="section-head">
 											<a class="fa fa-book navbar-brand Btitle"></a>
-											<a class="navbar-brand">Обучение</a>
+											<a class="navbar-brand fa fa-book">Обучение</a>
 											<div class="clearfix"></div>
 							</div>
 							
