--- a/v0/index.html
+++ b/v0/index.html
@@ -20,7 +20,11 @@
     FAVICONS
     =========================== -->
     <link rel="icon" href="img/favicon.ico">
-
+    <!-- ===========================
+    FONTS & ICONS
+    =========================== -->
+    <link href='//fonts.googleapis.com/css?family=Kristi|Alegreya+Sans:300' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!-- ===========================
     STYLESHEETS
     =========================== -->
@@ -28,11 +32,7 @@
     <link rel="stylesheet" href="css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/custom.css">
 
-    <!-- ===========================
-    FONTS & ICONS
-    =========================== -->
-    <link href='//fonts.googleapis.com/css?family=Kristi|Alegreya+Sans:300' rel='stylesheet' type='text/css'>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
 	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -115,7 +115,7 @@
 						<section id="educational">
 							<div class="section-head">
 											<a class="fa fa-book navbar-brand Btitle"></a>
-											<a class="navbar-brand fa fa-book">Обучение</a>
+											<a class="navbar-brand">Обучение</a>
 											<div class="clearfix"></div>
 							</div>
 							
