--- a/v0/index.html
+++ b/v0/index.html
@@ -118,11 +118,9 @@
 											<div class="clearfix"></div>
 					</div>
 					  <span class="label label-success">2015</span>
-					  <div class="ltarget">2015</div>
 					  <div class="ltarget">Сертификация</div>
 					  <div class="panel panel-default">
-							<div class="panel-heading">Сертификация</div>
-							<div class="panel-body">ZCNE Security Level 1</div>
+							<div class="panel-heading">ZCNE Security Level 1</div>
 							<div class="panel-body">Северо-Западный региональный учебный центр ZyXEL в  НИУ ИТМО</div>
 					  </div>
 					  
