--- a/v0/index.html
+++ b/v0/index.html
@@ -120,7 +120,7 @@
 					  <span class="label label-success">2015</span>
 					  <div class="ltarget">Сертификация</div>
 					  <div class="panel panel-default">
-							<div class="panel-heading panel-fix">ZCNE Security Level 1</div>
+							<div class="panel-heading">ZCNE Security Level 1</div>
 							<div class="panel-body">Северо-Западный региональный учебный центр ZyXEL в  НИУ ИТМО</div>
 					  </div>
 					  
