--- a/v0/index.html
+++ b/v0/index.html
@@ -114,7 +114,7 @@
 					  <!--Body content-->
 					<div class="head-col">
 											<a class="fa fa-book navbar-brand Btitle"></a>
-											<a class="navbar-brand">Обучение</a>
+											<a class="navbar-brand ctitle">Обучение</a>
 											<div class="clearfix"></div>
 					</div>
 					  <span class="label label-success">2015</span>
