--- a/v0/index.html
+++ b/v0/index.html
@@ -136,7 +136,18 @@
 								<div class="panel-heading">Специальность: Системное администрирование аппаратно-программных комплексов и сетей.</div>
 								<div class="panel-body">Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики</div>
 						  </div>
-
+						<span class="label label-success">2010 - 2014</span>
+						  <div class="ltarget">Бакалавриат</div>
+						  <div class="panel panel-default">
+								<div class="panel-heading">Специальность: Информатика и вычислительная техника.</div>
+								<div class="panel-body">Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики</div>
+						  </div>
+						<span class="label label-success">1999 - 2010</span>
+						  <div class="ltarget">Школа</div>
+						  <div class="panel panel-default">
+								<div class="panel-heading">Химико-технологический профиль</div>
+								<div class="panel-body">Гатчинский лицей №3</div>
+						  </div>						  
 					
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
