--- a/v0/index.html
+++ b/v0/index.html
@@ -110,7 +110,7 @@
 										</div> 
 								</div>
 							</div>
-					<div class="MainContent col-xs-12 col-sm-8 col-md-5 col-lg-5">
+					<div class="MainContent col-xs-12 col-sm-8 col-md-5 col-lg-5 kostil">
 					  <!--Body content-->
 						<div class="head-col">
 												<a class="fa fa-book navbar-brand Btitle"></a>
