--- a/v0/index.html
+++ b/v0/index.html
@@ -186,12 +186,55 @@
 					  <!--Body content-->
 					  
 					  	<span class="label label-success">///</span>
-						  <div class="ltarget">////</div>
-						  <div class="panel panel-default">
-								<div class="panel-heading">//</div>
-								<div class="panel-body">///</div>
-						  </div>
+					<div class="skills">
+					<div class="row">
+								<div class="col-sm-4" id="col-1">
+									<div class="each">
+										<div class="label">Установка\настройка ОС</div>
+									</div>
+									<div class="each">
+										<div class="label">Знание железа ПК</div>
+									</div>
+									<div class="each">
+										<div class="label">Wordpress</div>
+									</div>
+									<div class="each">
+										<div class="label">jQuery/JavaScript</div>
+									</div>
+								</div>
+
+								<div class="col-sm-4" id="col-2">
+									<div class="each">
+										<div class="label">AD\DNS\DHCP\RDP</div>
+									</div>
+									<div class="each">
+										<div class="label">Joomla</div>
+									</div>
+									<div class="each">
+										<div class="label">CSS3</div>
+									</div>
+									<div class="each">
+										<div class="label">Photoshop</div>
+									</div>
+								</div>
+								<div class="col-sm-4" id="col-3">
+									<div class="each">
+										<div class="label">Восстановление данных</div>
+									</div>
+									<div class="each">
+										<div class="label">phpBB</div>
+									</div>
+									<div class="each">
+										<div class="label">HTML5</div>
+									</div>
+									<div class="each">
+										<div class="label">MySQL</div>
+										</div>
+								</div>
+							</div>
+				</div>
 					</div>
+					
 					<!-- Modal -->
 					  <div class="modal fade" id="mapmodals">
 						<div class="modal-dialog modal-lg">
