--- a/v0/index.html
+++ b/v0/index.html
@@ -219,16 +219,16 @@
 								</div>
 								<div class="col-sm-4" id="col-3">
 									<div class="each">
-										<div class="label">Восстановление данных</div>
+										<div class="panel-body">Восстановление данных</div>
 									</div>
 									<div class="each">
-										<div class="label">phpBB</div>
+										<div class="panel-body">phpBB</div>
 									</div>
 									<div class="each">
-										<div class="label">HTML5</div>
+										<div class="panel-body">HTML5</div>
 									</div>
 									<div class="each">
-										<div class="label">MySQL</div>
+										<div class="panel-body">MySQL</div>
 										</div>
 								</div>
 							</div>
