--- a/v0/index.html
+++ b/v0/index.html
@@ -190,31 +190,31 @@
 					<div class="row">
 								<div class="col-sm-4" id="col-1">
 									<div class="each">
-										<div class="label">Установка\настройка ОС</div>
+										<div class="panel-body">Установка\настройка ОС</div>
 									</div>
 									<div class="each">
-										<div class="label">Знание железа ПК</div>
+										<div class="panel-body">Знание железа ПК</div>
 									</div>
 									<div class="each">
-										<div class="label">Wordpress</div>
+										<div class="panel-body">Wordpress</div>
 									</div>
 									<div class="each">
-										<div class="label">jQuery/JavaScript</div>
+										<div class="panel-body">jQuery/JavaScript</div>
 									</div>
 								</div>
 
 								<div class="col-sm-4" id="col-2">
 									<div class="each">
-										<div class="label">AD\DNS\DHCP\RDP</div>
+										<div class="panel-body">AD\DNS\DHCP\RDP</div>
 									</div>
 									<div class="each">
-										<div class="label">Joomla</div>
+										<div class="panel-body">Joomla</div>
 									</div>
 									<div class="each">
-										<div class="label">CSS3</div>
+										<div class="panel-body">CSS3</div>
 									</div>
 									<div class="each">
-										<div class="label">Photoshop</div>
+										<div class="panel-body">Photoshop</div>
 									</div>
 								</div>
 								<div class="col-sm-4" id="col-3">
