--- a/v0/index.html
+++ b/v0/index.html
@@ -185,7 +185,7 @@
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
 					  <!--Body content-->
 					  
-					  	<span class="label label-success">///</span>
+					  	<span class="label label-success">Навыки</span>
 					<div class="skills">
 					<div class="row">
 								<div class="col-sm-4" id="col-1">
