--- a/v0/index.html
+++ b/v0/index.html
@@ -188,7 +188,7 @@
 					  	<span class="label label-success">Навыки</span>
 					<div class="skills">
 					<div class="row">
-								<div class="col-sm-4" id="col-1">
+								<div class="col-sm-6 col-md-4">
 									<div class="each">
 										<div class="panel-body">Установка\настройка ОС</div>
 									</div>
@@ -203,7 +203,7 @@
 									</div>
 								</div>
 
-								<div class="col-sm-4" id="col-2">
+								<div class="col-sm-6 col-md-4">
 									<div class="each">
 										<div class="panel-body">AD\DNS\DHCP\RDP</div>
 									</div>
@@ -217,7 +217,7 @@
 										<div class="panel-body">Photoshop</div>
 									</div>
 								</div>
-								<div class="col-sm-4" id="col-3">
+								<div class="col-sm-12 col-md-4">
 									<div class="each">
 										<div class="panel-body">Восстановление данных</div>
 									</div>
