--- a/v0/index.html
+++ b/v0/index.html
@@ -156,31 +156,27 @@
 												<a class="fa fa-users navbar-brand Btitle"></a>
 												<a class="navbar-brand ctitle">Опыт работы</a>
 												<div class="clearfix"></div>
-						</div>
-							<span class="label label-success">2015</span>
-						  <div class="ltarget">Freelance</div>
-						  <div class="panel panel-default">
-								<div class="panel-heading">job</div>
-								<div class="panel-body">job</div>
-						  </div>
-						  							<span class="label label-success">2015</span>
-						  <div class="ltarget">Freelance</div>
-						  <div class="panel panel-default">
-								<div class="panel-heading">job</div>
-								<div class="panel-body">job</div>
-						  </div>
-						  							<span class="label label-success">2015</span>
-						  <div class="ltarget">Freelance</div>
-						  <div class="panel panel-default">
-								<div class="panel-heading">job</div>
-								<div class="panel-body">job</div>
-						  </div>
-						  <span class="label label-success">2015</span>
-						  <div class="ltarget">Freelance</div>
-						  <div class="panel panel-default">
-								<div class="panel-heading">job</div>
-								<div class="panel-body">job</div>
-						  </div>
+											</div>
+										  <span class="label label-success">2015</span>
+										  <div class="ltarget">Freelance</div>
+										  <div class="panel panel-default">
+										  <div class="panel-heading">job</div>
+										  <div class="panel-body">Создание сайтов-визиток. Ремонт компьютеров и ноутбуков, плашнетов, телефонов</div>
+										  </div>
+										  
+										  <span class="label label-success">Ноябрь 2013 - декабрь 2014</span>
+										  <div class="ltarget">Сервисный инженер</div>
+										  <div class="panel panel-default">
+										  <div class="panel-heading">Сервисный центр "ЮНИМ"</div>
+										  <div class="panel-body">Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры. <br>Восстановление работоспособности различных ОС <br>Восстановление данных.  <br>Консультирование и обучение пользователей. <br>Удаление баннеров. </div>
+										  </div>
+										  
+										  <span class="label label-success">2011 - 2012</span>
+										  <div class="ltarget">Freelance</div>
+										  <div class="panel panel-default">
+										  <div class="panel-heading">Freelance</div>
+										  <div class="panel-body">Разработка сайтов визиток. Настройка удаленных серверов.</div>
+										  </div>
 					</div>
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12">
 					  <!--Body content-->
