--- a/v0/index.html
+++ b/v0/index.html
@@ -168,7 +168,7 @@
 										  <div class="ltarget">Сервисный инженер</div>
 										  <div class="panel panel-default">
 										  <div class="panel-heading">Сервисный центр "ЮНИМ"</div>
-										  <div class="panel-body">Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры. <br>Восстановление работоспособности различных ОС <br>Восстановление данных.  <br>Консультирование и обучение пользователей. <br>Удаление баннеров. </div>
+										  <div class="panel-body list-group">Ремонт различного рода техники: телефоны, ноутбуки, ПК, планшеты, роутеры. <br>Восстановление работоспособности различных ОС <br>Восстановление данных.  <br>Консультирование и обучение пользователей. <br>Удаление баннеров. </div>
 										  </div>
 										  
 										  <span class="label label-success">2011 - 2012</span>
