--- a/v0/index.html
+++ b/v0/index.html
@@ -142,11 +142,11 @@
 								<div class="panel-heading">Специальность: Информатика и вычислительная техника.</div>
 								<div class="panel-body">Санкт-Петербургский национальный исследовательский университет информационных технологий, механики и оптики</div>
 						  </div>
-						<span class="label label-success">1999 - 2010</span>
-						  <div class="ltarget">Школа</div>
-						  <div class="panel panel-default">
-								<div class="panel-heading">Химико-технологический профиль</div>
-								<div class="panel-body">Гатчинский лицей №3</div>
+						<span class="label label-success hidden-print">1999 - 2010</span>
+						  <div class="ltarget hidden-print">Школа</div>
+						  <div class="panel panel-default hidden-print">
+								<div class="panel-heading hidden-print">Химико-технологический профиль</div>
+								<div class="panel-body hidden-print">Гатчинский лицей №3</div>
 						  </div>						  
 					
 					</div>
