--- a/v0/index.html
+++ b/v0/index.html
@@ -147,7 +147,7 @@
 					<div class="panel-heading">Продолжение на следующей странице</div>
 					</div>
 					
-					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5">
+					<div class="MainContent col-xs-12 col-sm-6 col-md-5 col-lg-5 printfixt2">
 					  <!--Body content-->
 											<div class="head-col">
 												<a class="fa fa-users navbar-brand Btitle"></a>
