--- a/v0/index.html
+++ b/v0/index.html
@@ -212,7 +212,7 @@
 										<div class="panel-body">Joomla</div>
 									</div>
 									<div class="each">
-										<div class="panel-body">CSS3</div>
+										<div class="panel-body">CSS</div>
 									</div>
 									<div class="each">
 										<div class="panel-body">Photoshop</div>
@@ -226,7 +226,7 @@
 										<div class="panel-body">phpBB</div>
 									</div>
 									<div class="each">
-										<div class="panel-body">HTML5</div>
+										<div class="panel-body">HTML</div>
 									</div>
 									<div class="each">
 										<div class="panel-body">MySQL</div>
