--- a/v0/index.html
+++ b/v0/index.html
@@ -186,10 +186,10 @@
 					<div class="MainContent col-xs-12 col-sm-6 col-md-12 col-lg-12 printfixt3">
 					  <!--Body content-->
 					  
-					  	<span class="label label-success">Навыки</span>
+					  	<span class="label label-success ">Навыки</span>
 					<div class="skills">
 					<div class="row">
-								<div class="col-sm-12 col-md-4">
+								<div class="col-sm-12 col-md-4 printfixt4">
 									<div class="each">
 										<div class="panel-body">Установка\настройка ОС</div>
 									</div>
@@ -204,7 +204,7 @@
 									</div>
 								</div>
 
-								<div class="col-sm-12 col-md-4">
+								<div class="col-sm-12 col-md-4 printfixt4">
 									<div class="each">
 										<div class="panel-body">AD\DNS\DHCP\RDP</div>
 									</div>
@@ -218,7 +218,7 @@
 										<div class="panel-body">Photoshop</div>
 									</div>
 								</div>
-								<div class="col-sm-12 col-md-4">
+								<div class="col-sm-12 col-md-4 printfixt4">
 									<div class="each">
 										<div class="panel-body">Восстановление данных</div>
 									</div>
