--- a/v0/index.html
+++ b/v0/index.html
@@ -189,7 +189,7 @@
 					  	<span class="label label-success ">Навыки</span>
 					<div class="skills">
 					<div class="row">
-								<div class="col-sm-12 col-md-4 printfixt4">
+								<div class="col-xs-12 col-sm-12 col-md-4 printfixt4">
 									<div class="each">
 										<div class="panel-body">Установка\настройка ОС</div>
 									</div>
@@ -204,7 +204,7 @@
 									</div>
 								</div>
 
-								<div class="col-sm-12 col-md-4 printfixt4">
+								<div class="col-xs-12 col-sm-12 col-md-4 printfixt4">
 									<div class="each">
 										<div class="panel-body">AD\DNS\DHCP\RDP</div>
 									</div>
@@ -218,7 +218,7 @@
 										<div class="panel-body">Photoshop</div>
 									</div>
 								</div>
-								<div class="col-sm-12 col-md-4 printfixt4">
+								<div class="col-xs-12 col-sm-12 col-md-4 printfixt4">
 									<div class="each">
 										<div class="panel-body">Восстановление данных</div>
 									</div>
