--- a/v0/index.html
+++ b/v0/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<!--[if IE]>
+	<script type="text/javascript">
+		window.location = "http://pingall.ru/print";
+	</script>
+	<![endif]-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
