--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
 												<div class="info"><p> <a href="https://vk.com/planol.alex" target="_blank">Вконтакте</a></p></div>
 												<div class="clearfix"></div>
 											</div>
+											
+											<div class="each btn btn-default cbtn hidden-print" >
+												<i class="fa fa-pencil"></i>
+												<div class="info"><p> <a href="https://pingall.ru/blog" target="_blank">Небольшой блог</a></p></div>
+												<div class="clearfix"></div>
+											</div>
 										</div> 
 								</div>
 							</div>
