--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			
 			<div class="cd-nav-items">
 				<ol>
-					<li><a href="#slide-1">Слайд 1</a></li>
+					<li><a href="#slide-1">Титульный лист</a></li>
 					<li>
 						<a href="#slide-2">Цель и задачи исследования</a>
 						<ol class="sub-nav">
