--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<h4><p>Научный руководитель:<br>Мартынов Владимир Павлович</p></h4></div>
 						</div>
 						<div class="row pnumber " >
-						<div class="col-xs-12 ">
+						<div class="col-md-12 ">
 						<p>Санкт-Петербург, 2016 год</p>
 						</div>						
 						</div>
@@ -104,37 +104,13 @@
 							</div>
 						</div>
 					</li>
-
-					<li>
-						<div class="cd-slider-content">
-							<div class="content-wrapper">
-								<h2>Slider #2 - Sub #1</h2>
-							</div>
-						</div>
-					</li>
-
-					<li>
-						<div class="cd-slider-content">
-							<div class="content-wrapper">
-								<h2>Slider #2 - Sub #2</h2>
-							</div>
-						</div>
-					</li>
-
-					<li>
-						<div class="cd-slider-content">
-							<div class="content-wrapper">
-								<h2>Slider #2 - Sub #3</h2>
-							</div>
-						</div>
-					</li>
 				</ol> <!-- .sub-slides -->
 			</li>
 
 			<li id="slide-3">
 				<div class="cd-slider-content">
 					<div class="content-wrapper">
-						<h2>Slider #3</h2>
+						<h2>Актуальность</h2>
 					</div>
 				</div>
 			</li>
