--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 					<li><a href="#slide-1">Титульный лист</a></li>
 					<li><a href="#slide-2">Цель и задачи исследования</a></li>
 					<li><a href="#slide-3">Актуальность</a></li>
-					<li><a href="#slide-4">Актуальность</a></li>
-					<li><a href="#slide-5">Актуальность</a></li>
-					<li><a href="#slide-6">Актуальность</a></li>
+					<li><a href="#slide-4">Актуальность2</a></li>
+					<li><a href="#slide-5">Актуальность3</a></li>
+					<li><a href="#slide-6">Актуальность4</a></li>
 					<li><a href="#slide-7">Slide 4</a></li>
 					<li><a href="#slide-8">Slide 5</a></li>
 					<li>
